<!--
  ~ Copyright 2020 Simon Kaleschke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- Application -->
    <string name="app_name">Balalaika</string>
    <string name="cancel">Cancel</string>
    <string name="affirm">OK</string>
    <string name="retry">Retry</string>

    <!-- Navigation drawer -->
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menus -->
    <string name="menu_dictionary">Dictionary</string>
    <string name="menu_bookmarks">Bookmarks</string>
    <string name="menu_search">Search Dictionary</string>
    <string name="menu_history">Search History</string>
    <string name="menu_about">About</string>
    <string name="menu_sources">Sources</string>
    <string name="menu_order_by">Order by</string>
    <string name="menu_setup_view">Setup View</string>
    <string name="menu_selection">My Dictionaries</string>
    <string name="menu_selection_detail">Dictionary</string>

    <!-- Descriptions for accessibility -->
    <string name="desc_history_item_icon">History entry</string>
    <string name="desc_history_item_delete_button">Remove entry</string>
    <string name="desc_search_item_icon" tools:keep="@string/desc_search_item_icon">Result</string>
    <string name="desc_dictionary_item_icon">Dictionary entry</string>
    <string name="desc_dictionary_item_collapse_button">Collapse entry</string>
    <string name="desc_dictionary_item_bookmark_button">Add to bookmarks</string>
    <string name="desc_dictionary_item_base_button">Go to base</string>
    <string name="desc_bookmarks_item_delete_button">Delete bookmark</string>
    <string name="desc_bookmarks_item_icon">Bookmark</string>
    <string name="desc_widget_key_value_icon">Widget Icon</string>
    <string name="desc_widget_action_button">Widget Action</string>

    <!-- Search fragment -->
    <string name="search_query">Query</string>
    <string name="search_no_results">Found no results</string>
    <string name="search_restriction">%1$s: %2$s</string>

    <!-- History fragment -->
    <string name="no_restriction">No additional restriction</string>
    <string name="history_entry_removed">History entry was removed</string>
    <string name="history_empty">History is empty</string>
    <string name="history_clear">Clear</string>
    <string name="history_clear_title">Clear History?</string>
    <string name="history_clear_affirm">OK</string>
    <string name="history_clear_cancel">Cancel</string>
    <string name="history_clear_done">History was cleared</string>

    <!-- Dictionary fragment -->
    <string name="dictionary_item_cancel">Cancel</string>
    <string name="dictionary_menu_message">Search by %1$s</string>
    <string name="dictionary_playback_failed">Playback failed</string>
    <string name="dictionary_bookmark_add">%1$s was added to bookmarks</string>
    <string name="dictionary_bookmark_remove">%1$s was removed from bookmarks</string>
    <string name="dictionary_empty">No dictionary selected</string>
    <string name="dictionary_select_dictionary">Select a dictionary</string>
    <string name="dictionary_wordnet_title">Wordnet Data for %1$s</string>
    <string name="dictionary_wordnet_words">Related words</string>
    <string name="dictionary_wordnet_definitions">Definitions</string>
    <string name="dictionary_wordnet_empty">Found no related words or definitions</string>

    <!-- Bookmarks fragment -->
    <string name="bookmarks_item_removed">Bookmark was removed</string>
    <string name="bookmarks_empty">You have no bookmarks</string>
    <string name="bookmarks_clear">Clear</string>
    <string name="bookmarks_clear_title">Remove all bookmarks?</string>
    <string name="bookmarks_clear_affirm">OK</string>
    <string name="bookmarks_clear_cancel">Cancel</string>
    <string name="bookmarks_clear_done">Bookmarks were cleared</string>

    <!-- Preferences -->
    <string name="preferences_dictionary">Dictionary Preferences</string>
    <string name="preferences_order_by_title">Dictionary order</string>
    <string name="preferences_order_by_summary">Set up your preferred order</string>
    <string name="preferences_order_by_dialog">Order by</string>
    <string name="preferences_view_title">Dictionary view</string>
    <string name="preferences_view_summary">Set up your preferred properties to display</string>
    <string name="preferences_view_dialog">Setup view</string>
    <string name="preferences_about">About</string>
    <string name="preferences_sources_title">Sources</string>
    <string name="preferences_author_title">Created by</string>
    <string name="preferences_license_title">License</string>
    <string name="preferences_contents">Contents</string>
    <string name="preferences_source_open">Open License</string>
    <string name="preferences_media">Media</string>
    <string name="preferences_icon_title">Balalaika icon created by</string>

    <!-- Dictionary selection fragment -->
    <string name="selection_empty">No dictionaries</string>
    <string name="selection_actions">Actions</string>
    <string name="selection_summary_title">Summary</string>
    <string name="selection_tab_list">My library</string>
    <string name="selection_tab_local">Included</string>
    <string name="selection_tab_download">Download</string>
    <string name="selection_authors_title">Authors</string>
    <string name="selection_info_title">Additional information</string>
    <string name="selection_action_activate">Read now</string>
    <string name="selection_action_deactivate">Close this dictionary</string>
    <string name="selection_action_update">Update</string>
    <string name="selection_action_add">Add to Library</string>
    <string name="selection_action_remove">Remove from library</string>
    <string name="selection_version_title">Version</string>
    <string name="selection_is_active">opened</string>
    <string name="selection_is_installable">new</string>
    <string name="selection_is_installed">library</string>
    <string name="selection_is_outdated">outdated</string>
    <string name="selection_is_uptodate">up-to-date</string>
    <string name="selection_is_updatable">updates</string>
    <string name="selection_confirm_activate">Open this dictionary?</string>
    <string name="selection_confirm_deactivate">Close this dictionary?</string>
    <string name="selection_confirm_update">Update this dictionary?</string>
    <string name="selection_confirm_add">Add %1$s to library?</string>
    <string name="selection_confirm_remove">Remove this dictionary?</string>
    <string name="selection_loading_success">Found %1$d dictionaries</string>
    <string name="selection_loading_failed">Could not load dictionaries</string>
    <string name="selection_labels">Labels</string>
    <string name="selection_no_labels">None</string>
    <string name="selection_success_activate">Dictionary opened</string>
    <string name="selection_success_deactivate">Dictionary closed</string>
    <string name="selection_success_update">Dictionary was updated</string>
    <string name="selection_success_install">Dictionary was installed</string>
    <string name="selection_success_remove">Dictionary was removed</string>
    <string name="selection_error_timeout">Timeout while performing operation</string>
    <string name="selection_error_network">Could not connect to server</string>
    <string name="selection_error_internal">Internal error while performing operation</string>
</resources>