<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.github.cheapmon.balalaika.ui.dictionary.DictionaryFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_dictionary" />
    <fragment
        android:id="@+id/nav_search"
        android:name="com.github.cheapmon.balalaika.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search">
        <argument
            android:name="query"
            android:defaultValue="@null"
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="restriction"
            app:argType="com.github.cheapmon.balalaika.ui.search.SearchFragment$Restriction"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/nav_history"
        android:name="com.github.cheapmon.balalaika.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" >
        <action
            android:id="@+id/action_nav_history_to_nav_search"
            app:destination="@id/nav_search"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

</navigation>