<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Simon Kaleschke
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="listener"
            type="com.github.cheapmon.balalaika.ui.selection.SelectionDetailFragment.Listener" />

        <variable
            name="dictionary"
            type="com.github.cheapmon.balalaika.db.entities.dictionary.Dictionary" />
    </data>

    <ScrollView
        android:id="@+id/selection_detail_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Balalaika.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{dictionary.name}"
                        android:textAppearance="?attr/textAppearanceHeadline6"
                        tools:text="Dictionary Name" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFeatureSettings="smcp"
                        android:text="@{dictionary.authors}"
                        android:textAppearance="?attr/textAppearanceCaption"
                        tools:text="Authors" />

                    <com.google.android.material.chip.ChipGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@+id/selection_guideline_icon"
                        app:layout_constraintTop_toBottomOf="@+id/selection_item_icon"
                        app:singleLine="true">

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/selection_is_installed"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:visibility="@{dictionary.isInstalled}"
                            app:chipMinHeight="16dp" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/selection_is_active"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="@android:color/white"
                            android:visibility="@{dictionary.isActive}"
                            app:chipIconTint="@android:color/white"
                            app:chipMinHeight="16dp"
                            app:chipSurfaceColor="?attr/colorPrimary" />

                        <com.google.android.material.chip.Chip
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:text="@string/selection_is_updatable"
                            android:textAppearance="?attr/textAppearanceCaption"
                            android:textColor="@android:color/white"
                            android:visibility="@{dictionary.isUpdatable}"
                            app:chipMinHeight="16dp"
                            app:chipSurfaceColor="?attr/colorSecondary" />

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Balalaika.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="8dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/selection_actions"
                            android:textAppearance="?attr/textAppearanceCaption" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/selection_button_activate"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> listener.onClickActivateButton(dictionary)}"
                        android:text="@string/selection_action_activate"
                        android:visibility="@{dictionary.installed &amp;&amp; !dictionary.active}" />

                    <Button
                        android:id="@+id/selection_button_deactivate"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> listener.onClickDeactivateButton(dictionary)}"
                        android:text="@string/selection_action_deactivate"
                        android:visibility="@{dictionary.installed &amp;&amp; dictionary.active}" />

                    <Button
                        android:id="@+id/selection_button_update"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> listener.onClickUpdateButton(dictionary)}"
                        android:text="@string/selection_action_update"
                        android:visibility="@{dictionary.updatable}" />

                    <Button
                        android:id="@+id/selection_button_add"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> listener.onClickAddButton(dictionary)}"
                        android:text="@string/selection_action_add"
                        android:visibility="@{!dictionary.installed}" />

                    <Button
                        android:id="@+id/selection_button_remove"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> listener.onClickRemoveButton(dictionary)}"
                        android:text="@string/selection_action_remove"
                        android:theme="@style/ThemeOverlay.Balalaika.Danger"
                        android:visibility="@{dictionary.installed}" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                style="@style/Widget.Balalaika.Card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        style="?attr/textAppearanceCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selection_summary_title" />

                    <TextView
                        style="?attr/textAppearanceBody2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@{dictionary.summary}"
                        app:justify="@{true}"
                        tools:text="@string/impsum" />

                    <TextView
                        style="?attr/textAppearanceCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/selection_info_title" />

                    <TextView
                        style="?attr/textAppearanceBody2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autoLink="web"
                        android:text="@{dictionary.additionalInfo}"
                        app:justify="@{true}"
                        tools:text="@string/impsum" />

                    <TextView
                        style="?attr/textAppearanceCaption"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/selection_version_title" />

                    <TextView
                        style="?attr/textAppearanceBody2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(dictionary.version)}"
                        tools:text="1.0" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>
</layout>